# Void

./: readme.md
jegalmin/: readme_1.md
mlops/: DQM_Process.md  classifier.py  createBaseModel.py  createFeature.py  createPeronalModel.py  evaluateFeature.py  extendData.py  main.py  makingData.py  outlierDetection.py  readme.md
mlops/fast-api-pj/: .gitignore  README.md  pyproject.toml
mlops/fast-api-pj/src/app/: config.py  main.py  scheduler.py
mlops/fast-api-pj/src/app/models/classifier/: autoencoder.py  dbscan.py
mlops/fast-api-pj/src/app/models/model_creation/: create_base_model.py  create_personal_model.py
mlops/fast-api-pj/src/app/models/process_data/: evaluate_feature.py  extend_feature.py  making_data.py  outlier_detection.py
mlops/fast-api-pj/src/app/routers/: api.py
mlops/fast-api-pj/src/app/services/: classifier_service.py  model_creation_service.py  process_data_service.py
mlops/fast-api-pj/src/app/utils/: helpers.py
void/: package-lock.json  package.json  tailwind.config.js
void/pages/: _app.tsx
void/public/: index.html  manifest.json
void/public/sounds/: off.m4a  on.m4a
void/src/: App.tsx  index.css  index.tsx
void/src/components/: WaterPurifierPage.tsx
void/src/components/AdminDashboard/: MainContent.tsx  Sidebar.tsx  index.tsx
void/src/components/AdminDashboard/data/: voiceSampleData.ts
void/src/components/AdminDashboard/pages/: Dashboard.tsx  PurifierManagement.tsx  UserManagement.tsx  VoiceManagement.tsx  WaterManagement.tsx
