[project]
name = "fast-api-pj"
version = "0.1.0"
description = ""
authors = [
    {name = "최수환",email = "wasdl@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "dtaidistance (>=2.3.13,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "numba (>=0.61.0,<0.62.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
